# matrix-hal-nfc

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean_build.sh  creator_nfc_pins.patch  install_nxp.sh  rebuild.sh  rebuild_examples.sh  redo_lib.cpp  redo_lib.h
examples/: CMakeLists.txt  benchmark_nfc_readinfo.cpp  nfc_detect.cpp  nfc_rainbow_switch.cpp  nfc_rainbow_toggle.cpp  nfc_read.cpp  nfc_read_mful_tag.cpp  nfc_read_ndef.cpp  nfc_read_pages.cpp  nfc_rgb.cpp  nfc_unique_color_toggle.cpp  nfc_write_mful_tag.cpp  nfc_write_ndef.cpp  rebuild_examples.sh  test
src/: CMakeLists.txt  nfc.cpp  nfc.h  nfc_abstraction.h  nfc_data.h  nfc_info.h  nfc_init.cpp  nfc_init.h  nfc_ndef.h  nfc_sensor.cpp  nfc_sensor.h  nfc_status.cpp  nfc_status.h  nfc_types.cpp  nfc_types.h  nfc_utility.cpp  nfc_utility.h
src/cards/: mful.cpp  mful.h  ntag.cpp  ntag.h
src/data/: info_content.h  ndef_content.h  nfc_data.h  pages_content.h
src/ndef/: ndef.cpp  ndef.h
src/ndef/ndef_parse/: NdefMessage.cpp  NdefMessage.h  NdefRecord.cpp  NdefRecord.h  ndef_message.cpp  ndef_message.h  ndef_parser.cpp  ndef_parser.h  ndef_record.cpp  ndef_record.h
